--- a/css/styles.css
+++ b/css/styles.css
@@ -134,7 +134,7 @@
 }
 .intro .introH1 {
   color: #fff;
-  font-size: 15rem;
+  font-size: 16rem;
   font-family: "Open Sans", Sans-serif;
   opacity: 0;
   text-align: center;
@@ -167,6 +167,25 @@
   font-size: 5rem;
   line-height: 1.2;
 }
+.mainSection .txtArea .mainBtn {
+  width: 15rem;
+  height: 5rem;
+  border: none;
+  border-left: 1px solid #5b78c7;
+  border-right: 1px solid #5b78c7;
+  border-radius: 2rem;
+  background: #fff;
+  font-size: 2rem;
+  font-family: "Poppins", sans-serif;
+  margin: 5rem;
+  opacity: 0.5;
+}
+.mainSection .txtArea .mainBtn:hover {
+  color: #fff;
+  background: #5b78c7;
+  opacity: 1;
+  cursor: pointer;
+}
 
 .aboutSection {
   width: 100%;
@@ -194,8 +213,8 @@
   display: flex;
 }
 .aboutSection .box2 .aboutP {
-  text-align: center;
-  font-size: 2.5rem;
+  text-align: left;
+  font-size: 2rem;
   line-height: 2;
   font-family: "Poppins", sans-serif;
   padding: 8rem;
@@ -204,34 +223,38 @@
 .projectSection {
   background: #fff;
   width: 100vw;
-  height: 50vh;
+  height: 80vh;
   display: flex;
-  flex-direction: column;
   align-items: center;
 }
 .projectSection .projectTxt {
-  width: 100%;
-  height: auto;
+  width: 50%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 8rem;
 }
 .projectSection .projectTxt .projectH1 {
-  padding: 2rem;
   font-size: 5rem;
   font-family: "Open Sans", sans-serif;
   text-align: center;
 }
 .projectSection .devTools {
-  width: 100%;
+  width: 50%;
   height: 100%;
   display: flex;
+  flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
 }
 .projectSection .devTools .mainTools,
 .projectSection .devTools .supTools {
-  width: 50%;
-  height: 100%;
+  width: 100%;
+  height: 50%;
   display: flex;
   flex-wrap: wrap;
+  flex-direction: column;
   justify-content: space-around;
   align-items: center;
 }
@@ -257,12 +280,19 @@
   width: 100vw;
   height: 40vh;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   padding: 8rem;
 }
+.projectTxt2 h1 {
+  font-size: 5rem;
+  font-family: "Open Sans", sans-serif;
+  margin: 2rem;
+}
 .projectTxt2 p {
   font-family: "Poppins", sans-serif;
+  line-height: 2;
   font-size: 2.5rem;
   text-align: center;
 }
@@ -296,6 +326,25 @@
   line-height: 2;
   font-family: "Poppins", sans-serif;
   margin-right: 5%;
+}
+.projectCards .left .detailsWrapper .cards .cardBtns {
+  width: 15rem;
+  height: 5rem;
+  border: none;
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
+  border-radius: 1rem;
+  background: #fff;
+  font-size: 2rem;
+  font-family: "Poppins", sans-serif;
+  margin-top: 2rem;
+  opacity: 0.5;
+}
+.projectCards .left .detailsWrapper .cards .cardBtns:hover {
+  color: #fff;
+  background: #5b78c7;
+  opacity: 1;
+  cursor: pointer;
 }
 .projectCards .right {
   width: 50%;
@@ -358,60 +407,79 @@
 
 .footContainer {
   width: 100%;
-  height: 40vh;
+  height: 100vh;
   display: flex;
+  flex-direction: column;
   align-items: center;
   background: #080f0f;
 }
 .footContainer .footBox1 {
-  width: 40%;
-  height: 100%;
+  width: 100%;
+  height: 80%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   text-align: center;
+  line-height: 1.5;
 }
 .footContainer .footBox1 h1 {
-  color: #fff;
   font-family: "Open Sans", sans-serif;
-  font-size: 4rem;
+  color: #fff;
+  font-size: 6rem;
+  font-weight: 600;
 }
 .footContainer .footBox1 p {
-  color: #fff;
-  font-size: 2rem;
   font-family: "Poppins", sans-serif;
+  font-size: 2rem;
+  color: #fff;
+  padding: 2rem;
 }
 .footContainer .footBox2 {
-  width: 60%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-}
-.footContainer .footBox2 ul {
+  width: 100%;
+  height: 20%;
   display: flex;
   flex-direction: column;
+}
+.footContainer .footBox2 .socialLinks {
+  width: 100%;
+  height: 50%;
+  display: flex;
+  justify-content: center;
   color: #fff;
   font-family: "Poppins", sans-serif;
-  text-align: center;
+  align-items: center;
 }
-.footContainer .footBox2 ul .liTitle {
-  font-size: 2.5rem;
-  text-decoration: underline;
-}
-.footContainer .footBox2 ul li {
+.footContainer .footBox2 .socialLinks li {
   list-style: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 2rem;
 }
-.footContainer .footBox2 ul li a {
+.footContainer .footBox2 .socialLinks li:hover .socials,
+.footContainer .footBox2 .socialLinks li:hover p {
+  fill: #5b78c7;
+  color: #5b78c7;
+  cursor: pointer;
+}
+.footContainer .footBox2 .socialLinks li p {
   text-decoration: none;
   color: #fff;
-  font-size: 2rem;
+  font-size: 1.5rem;
 }
-.footContainer .footBox2 ul li a:hover {
-  color: #5b78c7;
-  text-decoration: underline;
-  text-decoration-color: #fff;
+.footContainer .footBox2 .copyRightDiv {
+  width: 100%;
+  height: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.footContainer .footBox2 .copyRightDiv p {
+  font-family: "Poppins", sans-serif;
+  color: #fff;
+  font-size: 1.5rem;
 }
 
 @media screen and (max-width: 768px) {
@@ -522,6 +590,25 @@
     font-size: 2rem;
     font-family: "Poppins", sans-serif;
   }
+  .projectCardMobile .mobileCards .mCardTxt .cardBtns {
+    width: 15rem;
+    height: 5rem;
+    border: none;
+    border-left: 1px solid black;
+    border-right: 1px solid black;
+    border-radius: 1rem;
+    background: #fff;
+    font-size: 2rem;
+    font-family: "Poppins", sans-serif;
+    margin-top: 2rem;
+    opacity: 0.5;
+  }
+  .projectCardMobile .mobileCards .mCardTxt .cardBtns:hover {
+    color: #fff;
+    background: #5b78c7;
+    opacity: 1;
+    cursor: pointer;
+  }
   .contactContainer {
     width: 100vw;
   }
@@ -532,7 +619,6 @@
   }
   .footContainer {
     width: 100vw;
-    height: 50vh;
     flex-direction: column;
   }
   .footContainer .footBox2 {
