--- a/css/styles.scss
+++ b/css/styles.scss
@@ -175,7 +175,7 @@
 
   .introH1 {
     color: #fff;
-    font-size: 15rem;
+    font-size: 16rem;
     font-family: "Open Sans", Sans-serif;
     opacity: 0;
     text-align: center;
@@ -213,6 +213,28 @@
       //font-weight: 300;
       line-height: 1.2;
     }
+
+    .mainBtn {
+      width: 15rem;
+      height: 5rem;
+      border: none;
+      border-left: 1px solid #5b78c7;
+      border-right: 1px solid #5b78c7;
+      border-radius: 2rem;
+      //box-shadow: 0 8px 30px rgba(0, 0, 0, 0.1);
+      background: #fff;
+      font-size: 2rem;
+      font-family: "Poppins", sans-serif;
+      margin: 5rem;
+      opacity: 0.5;
+
+      &:hover {
+        color: #fff;
+        background: #5b78c7;
+        opacity: 1;
+        cursor: pointer;
+      }
+    }
   }
 }
 
@@ -248,8 +270,8 @@
     //border: 2px solid green;
 
     .aboutP {
-      text-align: center;
-      font-size: 2.5rem;
+      text-align: left;
+      font-size: 2rem;
       line-height: 2;
       font-family: "Poppins", sans-serif;
       padding: 8rem;
@@ -262,31 +284,37 @@
 .projectSection {
   background: #fff;
   width: 100vw;
-  height: 50vh;
+  height: 80vh;
   display: flex;
-  flex-direction: column;
+  //flex-direction: column;
   align-items: center;
-  //border: 2px solid red;
+  // border: 2px solid red;
 
   .projectTxt {
-    width: 100%;
-    height: auto;
+    width: 50%;
+    height: 100%;
     //border: 2px solid green;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 8rem;
 
     .projectH1 {
-      padding: 2rem;
+      //padding: 2rem;
+      //border: 1px solid pink;
       font-size: 5rem;
       font-family: "Open Sans", sans-serif;
       text-align: center;
+
       //color: #1c1d20;
     }
   }
 
   .devTools {
-    width: 100%;
+    width: 50%;
     height: 100%;
     display: flex;
-    //flex-direction: column;
+    flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
     // padding: 2.5rem;
@@ -294,11 +322,11 @@
 
     .mainTools,
     .supTools {
-      width: 50%;
-      height: 100%;
+      width: 100%;
+      height: 50%;
       display: flex;
       flex-wrap: wrap;
-      //flex-direction: column;
+      flex-direction: column;
       justify-content: space-around;
       align-items: center;
       //overflow: hidden;
@@ -331,13 +359,20 @@
   width: 100vw;
   height: 40vh;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   padding: 8rem;
-  //border: 2px solid red;
+  //border: 1px solid blue;
+  h1 {
+    font-size: 5rem;
+    font-family: "Open Sans", sans-serif;
+    margin: 2rem;
+  }
   p {
     font-family: "Poppins", sans-serif;
     //padding: 10rem;
+    line-height: 2;
     font-size: 2.5rem;
     text-align: center;
     //border: 2px solid green;
@@ -346,7 +381,7 @@
 
 .projectCards {
   display: flex;
-  //border: 2px solid pink;
+  //border: 2px solid green;
   width: 100%;
   height: 100%;
 
@@ -356,7 +391,7 @@
     .detailsWrapper {
       margin: auto;
       width: 80%;
-
+      //border: 1px solid orange;
       .cards {
         height: 100vh;
         //outline:1px solid green;
@@ -378,12 +413,34 @@
           font-family: "Poppins", sans-serif;
           margin-right: 5%;
         }
+
+        .cardBtns {
+          width: 15rem;
+          height: 5rem;
+          border: none;
+          border-top: 1px solid black;
+          border-bottom: 1px solid black;
+          border-radius: 1rem;
+          //box-shadow: 0 8px 30px rgba(0, 0, 0, 0.1);
+          background: #fff;
+          font-size: 2rem;
+          font-family: "Poppins", sans-serif;
+          margin-top: 2rem;
+          opacity: 0.5;
+
+          &:hover {
+            color: #fff;
+            background: #5b78c7;
+            opacity: 1;
+            cursor: pointer;
+          }
+        }
       }
     }
   }
 
   .right {
-    //outline:1px solid purple;
+    //outline: 1px solid purple;
     width: 50%;
     height: 100vh;
     display: flex;
@@ -461,79 +518,103 @@
 
 .footContainer {
   width: 100%;
-  height: 40vh;
+  height: 100vh;
   display: flex;
   // border-radius: 30px 30px 0 0;
-  //flex-direction: column;
+  flex-direction: column;
   align-items: center;
   //justify-content: center;
   background: #080f0f;
   //box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
 
   .footBox1 {
-    width: 40%;
-    height: 100%;
+    width: 100%;
+    height: 80%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
+    line-height: 1.5;
     //border: 2px solid red;
     h1 {
-      color: #fff;
       font-family: "Open Sans", sans-serif;
-      font-size: 4rem;
-      //margin-right: 5rem;
+      color: #fff;
+      font-size: 6rem;
+      font-weight: 600;
+      //margin-bottom: 1rem;
     }
 
     p {
-      color: #fff;
-      font-size: 2rem;
       font-family: "Poppins", sans-serif;
+      font-size: 2rem;
+      color: #fff;
+      padding: 2rem;
+      //margin-right: 5rem;
     }
   }
 
   //original state
   .footBox2 {
-    width: 60%;
-    height: 100%;
+    width: 100%;
+    height: 20%;
     display: flex;
-    //flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
-    // border: 2px solid red;
+    flex-direction: column;
+    //align-items: center;
+    //justify-content: space-evenly;
+    //border: 2px solid red;
 
-    ul {
+    .socialLinks {
+      width: 100%;
+      height: 50%;
       display: flex;
-      flex-direction: column;
-      //align-items: center;
+      //flex-direction: column;
+      justify-content: center;
       color: #fff;
       //font-size: 2rem;
       font-family: "Poppins", sans-serif;
-      text-align: center;
-      //border: 1px solid red;
-
-      .liTitle {
-        // font-weight: 700;
-        font-size: 2.5rem;
-        text-decoration: underline;
-      }
+      align-items: center;
+      //border: 1px solid white;
 
       li {
         list-style: none;
-
-        a {
-          text-decoration: none;
-          color: #fff;
-          font-size: 2rem;
-
-          &:hover {
+        //line-height: 1.5;
+        //border: 1px solid red;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: 2rem;
+        &:hover {
+          .socials,
+          p {
+            fill: #5b78c7;
             color: #5b78c7;
-
-            text-decoration: underline;
-            text-decoration-color: #fff;
+            cursor: pointer;
           }
         }
+
+        p {
+          text-decoration: none;
+          color: #fff;
+          font-size: 1.5rem;
+          //font-weight: 200;
+        }
+      }
+    }
+
+    .copyRightDiv {
+      width: 100%;
+      height: 50%;
+      //border: 1px solid green;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      p {
+        font-family: "Poppins", sans-serif;
+        color: #fff;
+        font-size: 1.5rem;
       }
     }
   }
@@ -684,6 +765,28 @@
           font-size: 2rem;
           font-family: "Poppins", sans-serif;
         }
+
+        .cardBtns {
+          width: 15rem;
+          height: 5rem;
+          border: none;
+          border-left: 1px solid black;
+          border-right: 1px solid black;
+          border-radius: 1rem;
+          //box-shadow: 0 8px 30px rgba(0, 0, 0, 0.1);
+          background: #fff;
+          font-size: 2rem;
+          font-family: "Poppins", sans-serif;
+          margin-top: 2rem;
+          opacity: 0.5;
+
+          &:hover {
+            color: #fff;
+            background: #5b78c7;
+            opacity: 1;
+            cursor: pointer;
+          }
+        }
       }
     }
   }
@@ -700,7 +803,7 @@
 
   .footContainer {
     width: 100vw;
-    height: 50vh;
+    //height: 50vh;
     flex-direction: column;
 
     //justify-content: ;
