--- a/css/styles.css
+++ b/css/styles.css
@@ -532,17 +532,22 @@
   .projectSection .devTools {
     height: 50%;
     width: 100%;
+    border: 2px solid green;
   }
   .projectSection .devTools .mainTools .svgPack,
   .projectSection .devTools .supTools .svgPack {
-    width: 50%;
+    border: 1px solid red;
+    width: 55%;
     height: 100%;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
+    flex-direction: row;
     flex-wrap: wrap;
+    gap: 2rem;
   }
   .projectSection .devTools .mainTools .svgPack .toolsBundle,
   .projectSection .devTools .supTools .svgPack .toolsBundle {
+    border: 1px solid lightgreen;
     padding: 0.5rem;
   }
   .projectTxt2 {
