--- a/css/styles.scss
+++ b/css/styles.scss
@@ -705,7 +705,7 @@
     .devTools {
       height: 50%;
       width: 100%;
-      //border: 2px solid green;
+      border: 2px solid green;
       //flex-direction: column;
       .mainTools,
       .supTools {
@@ -713,17 +713,18 @@
         //border: 1px solid blue;
         //flex-wrap: wrap;
         .svgPack {
-          //border: 1px solid red;
-          width: 50%;
+          border: 1px solid red;
+          width: 55%;
           height: 100%;
-          justify-content: center;
+          justify-content: space-evenly;
           align-items: center;
-          //flex-direction: column;
+          flex-direction: row;
           flex-wrap: wrap;
+          gap: 2rem;
           //flex-grow: 1;
 
           .toolsBundle {
-            //border: 1px solid lightgreen;
+            border: 1px solid lightgreen;
             //align-items: star;
             padding: 0.5rem;
           }
